Fixed content and added pictures

--- a/about/biography/audit-committee.html
+++ b/about/biography/audit-committee.html
@@ -3,7 +3,18 @@
     {% if craft.i18n.getCurrentLocale() == 'th' %}
 
         <div class="row" >
-            
+            <div class="col-md-4">
+                <div class="card textCenter" style="width: 30rem;">
+                    <a class="wirach-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wirach_morakotkarn.jpg#asset:2563:url"></a>
+                    <div class="card-body">
+                        <p>                        
+                            <a class="wirach-th" href="#">นายวิรัช มรกตกาล</a>
+                            <br/>
+                            <a class="wirach-th" href="#">กรรมการอิสระ</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
                     <a class="pannee-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/pannee_jarusombat.jpg#asset:2561:url"></a>
@@ -34,7 +45,18 @@
     {% else %}
 
         <div class="row" >
-        
+            <div class="col-md-4">
+                <div class="card textCenter" style="width: 30rem;">
+                    <a class="wirach-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wirach_morakotkarn.jpg#asset:2563:url"></a>
+                    <div class="card-body">
+                        <p>                        
+                            <a class="wirach-eng" href="#">Mr. Wirach Morakotkarn</a>
+                            <br/>
+                            <a class="wirach-eng" href="#">Independent Director</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
                     <a class="pannee-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/pannee_jarusombat.jpg#asset:2561:url"></a>
