--- a/about/biography/corporate-governance-committee.html
+++ b/about/biography/corporate-governance-committee.html
@@ -3,6 +3,7 @@
     {% if craft.i18n.getCurrentLocale() == 'th' %}
 
         <div class="row" >
+
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
                     <a class="vichaya-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vichaya_krea_ngam.jpg#asset:2562:url"></a>
@@ -10,19 +11,19 @@
                         <p>                        
                             <a class="vichaya-th" href="#">ดร.วิชญะ เครืองาม</a>
                             <br/>
-                            <a class="vichaya-th" href="#">ประธานกรรมการกำกับดูแลกิจการที่ดี</a>
+                            <a class="vichaya-th" href="#">ประธานคณะกรรมการกำกับดูแลกิจการที่ดี</a>
                         </p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <a class="wirach-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wirach_morakotkarn.jpg#asset:2563:url"></a>
+                    <a class="vipoota-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vipoota_trakulhoon.jpg#asset:2571:url"></a>
                     <div class="card-body">
-                        <p> 
-                            <a class="wirach-th" href="#">นายวิรัช มรกตกาล</a>
+                        <p>                        
+                            <a class="vipoota-th" href="#">นายวิภูธา ตระกูลฮุน</a>
                             <br/>
-                            <a class="wirach-th" href="#">กรรมการกำกับดูแลกิจการที่ดี</a>
+                            <a class="vipoota-th" href="#">กรรมการกำกับดูแลกิจการที่ดี</a>
                         </p>
                     </div>
                 </div>
@@ -39,12 +40,14 @@
                     </div>
                 </div>
             </div>   
+
         </div>
 
         <div class="row">
+
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <a class="wisadja-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url"></a>
+                    <a class="wisadja-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wisadja_kochsena.jpg#asset:2572:url"></a>
                     <div class="card-body">
                         <p> 
                             <a class="wisadja-th" href="#">นางวิสัจจา คชเสนา</a>
@@ -54,11 +57,13 @@
                     </div>
                 </div>
             </div>   
+
         </div>
 
     {% else %}
 
          <div class="row" >
+
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
                     <a class="vichaya-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vichaya_krea_ngam.jpg#asset:2562:url"></a>
@@ -73,12 +78,12 @@
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <a class="wirach-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wirach_morakotkarn.jpg#asset:2563:url"></a>
+                    <a class="vipoota-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vipoota_trakulhoon.jpg#asset:2571:url"></a>
                     <div class="card-body">
                         <p>                        
-                            <a class="wirach-eng" href="#">Mr. Wirach Morakotkarn</a>
+                            <a class="vipoota-eng" href="#">Mr.Vipoota Trakulhoon</a>
                             <br/>
-                            <a class="wirach-eng" href="#">Corporate Governance Committee</a>
+                            <a class="vipoota-eng" href="#">Corporate Governance Committee</a>
                         </p>
                     </div>
                 </div>
@@ -94,12 +99,15 @@
                         </p>
                     </div>
                 </div>
-            </div>     
+            </div>   
+
         </div>
+
         <div class="row">
+
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <a class="wisadja-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url"></a>
+                    <a class="wisadja-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wisadja_kochsena.jpg#asset:2572:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="wisadja-eng" href="#">Mrs. Wisadja Kochsena</a>
@@ -109,6 +117,7 @@
                     </div>
                 </div>
             </div>     
+
         </div>
 
     {% endif %}
