--- a/about/biography/vipoota-eng.html
+++ b/about/biography/vipoota-eng.html
@@ -7,21 +7,22 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5">
-                    <img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wisadja_kochsena.jpg#asset:2572:url">
+                    <img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vipoota_trakulhoon.jpg#asset:2571:url">
                 </div>
                 <div class="col-md-7">
                     <!--div class="row"-->
                         <b>Education History</b>
                         <ul>
-                            <li>Master of Accounting , Ramkhamhang University</li>
+                            <li>Master of Business Administration, Sasin Graduate Institute of Business Administration of Chulalongkorn University</li>
+                            <li>Bachelor of Business Administration in faculty of banking and finance, Chulalongkorn University</li>
                         </ul>
                         <b>Training Experience</b>
                         <ul>
-                            <li>None</li>
+                            <li>Director Accreditation Program from Thai Institute of Directors (IOD) Class 117/2015</li>
                         </ul>
                         <b>Percentage in Shareholding (%)</b>
                         <ul>
-                            <li>0.00% Holding 334 shares</li>
+                            <li>None</li>
                         </ul>
                         <b>Family Relationship with Board of Directors or Executives</b>
                         <ul>
@@ -30,16 +31,30 @@
                         <b>Working Experience</b>
                         <ul>
                             <li>
-                                2016 - Present
-                                <br />Director of Accounting & Finance, General Engineering Public Company Limited
+                                Present
+                                <br />Independent Director / Member of Good Corporate Governance Committee / Chairman of Nominating & Remuneration Committee / Member of Risk Management Committee
+                                <br />General Engineering Public Company Limited
                             </li>
                             <li>
-                                2011 - 2016
-                                <br />Accounting & Finance Consulting, General Engineering Public Company Limited
+                                2014 - Present
+                                <br />Executive Committee, Millcon Steel Industries Public Company Limited
                             </li>
                             <li>
-                                1993 - 2008
-                                <br />Accounting & Finance Manager, P plus P Public Company Limited
+                                Present
+                                <br />Chairman, Triple O Logistic
+                            </li>
+                            <li>
+                                Present
+                                <br />Independent Director / Audit Committee, Business Alignment Public Company Limited
+                            </li>
+                            <li>
+                                Present
+                                <br />Director, Creative Power Col, Ltd.
+                            </li>
+                            <li>
+                                2011 - 2013
+                                <br />Senior Executive Vice President / Managing Director Corporate banking
+                                <br />Krungthai Bank Public Company Limited
                             </li>
                         </ul>
                     <!--/div-->
