--- a/about/management-team.html
+++ b/about/management-team.html
@@ -85,12 +85,12 @@
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <a class="tawat-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/tawat_anantanavanich.jpg#asset:2560:url"></a>
+                    <a class="tawat-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url"></a>
                     <div class="card-body">
                         <p> 
-                            <a class="tawat-th" href="#">ดร.ธวัช อนันต์ธนวณิช</a>
+                            <a class="tawat-th" href="#">นายอมรศักดิ์ โตรส</a>
                             <br/>
-                            <a class="tawat-th" href="#">กรรมการบริหาร / กรรมการผู้จัดการ</a>
+                            <a class="tawat-th" href="#">รองประธานเจ้าหน้าที่บริหารสายการผลิต</a>
                         </p>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
                         <p>                        
                             <a class="wuttichai-th" href="#">นายวุฒิชัย เศรษฐบุตร</a>
                             <br/>
-                            <a class="wuttichai-th" href="#">กรรมการบริหาร</a>
+                            <a class="wuttichai-th" href="#">กรรมการบริหารและเลขานุการบริษัท</a>
                         </p>
                     </div>
                 </div>
@@ -127,9 +127,9 @@
                     <a class="#" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url"></a>
                     <div class="card-body">
                         <p> 
-                            <a class="#" href="#">นายสุรชาติ อุ่วมอุ่ม</a>
+                            <a class="#" href="#">นางสาวชื่นสุข มีโพธิ์สม</a>
                             <br/>
-                            <a class="#" href="#">ผู้อำนวยการฝ่ายผลิตเสาเข็มคอนกรีตอัดแรง</a>
+                            <a class="#" href="#">ผู้อำนวยการฝ่ายพัฒนาและควบคุมธุรกิจ</a>
                         </p>
                     </div>
                 </div>
@@ -173,6 +173,18 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-4">
+                <div class="card textCenter" style="width: 30rem;">
+                    <a class="#" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url"></a>
+                    <div class="card-body">
+                        <p> 
+                            <a class="#" href="#">นายชาติชาย หิรัญนุช</a>
+                            <br/>
+                            <a class="#" href="#">ผู้อำนวยการฝ่ายดิจิทัล</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
        
     </div>
@@ -196,12 +208,12 @@
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <a class="tawat-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/tawat_anantanavanich.jpg#asset:2560:url"></a>
+                    <a class="tawat-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url"></a>
                     <div class="card-body">
                         <p> 
-                            <a class="tawat-eng" href="#">Dr. Tawat Anantanavanich</a>
+                            <a class="tawat-eng" href="#">Mr. Amornsak Torot</a>
                             <br/>
-                            <a class="tawat-eng" href="#">Executive Committee / Managing Director</a>
+                            <a class="tawat-eng" href="#">Deputy Chief Executive Officer - Production</a>
                         </p>
                     </div>
                 </div>
@@ -213,7 +225,7 @@
                         <p>                        
                             <a class="wuttichai-eng" href="#">Mr. Wuttichai Sresthabutra</a>
                             <br/>
-                            <a class="wuttichai-eng" href="#">Executive Committee</a>
+                            <a class="wuttichai-eng" href="#">Director and Company Secretary</a>
                         </p>
                     </div>
                 </div>
@@ -238,9 +250,9 @@
                     <a class="#" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url"></a>
                     <div class="card-body">
                         <p> 
-                            <a class="#" href="#">Mr. Surachart Uamum</a>
+                            <a class="#" href="#">Ms. Chuensuk Meeposom</a>
                             <br/>
-                            <a class="#" href="#">Vice PResident of Production Concrete Piles</a>
+                            <a class="#" href="#">Vice President of Business Development and Business Control</a>
                         </p>
                     </div>
                 </div>
@@ -252,7 +264,7 @@
                         <p>                        
                             <a class="#" href="#">Mr. Somnuk Puttiwat</a>
                             <br/>
-                            <a class="#" href="#">Vice PResident of Service Ring Reinforced Concrete</a>
+                            <a class="#" href="#">Vice President of Service Ring Reinforced Concrete</a>
                         </p>
                     </div>
                 </div>
@@ -280,6 +292,18 @@
                             <a class="#" href="#">Mrs. Linjong Srisongkhram</a>
                             <br/>
                             <a class="#" href="#">Vice President of Sale</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card textCenter" style="width: 30rem;">
+                    <a class="#" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url"></a>
+                    <div class="card-body">
+                        <p> 
+                            <a class="#" href="#">Mr. Chardchai Hirunnuj</a>
+                            <br/>
+                            <a class="#" href="#">Vice President of Digital</a>
                         </p>
                     </div>
                 </div>
@@ -335,15 +359,15 @@
 
         if($(".wuttichai-th").length) {
             $(".wuttichai-th").click(function() {  
-                $("#bioName").text("นายธิติพงศ์ ตั้งพูนผลวิวัฒน์");
-                $("#bioTitle").text("กรรมการบริหาร");
+                $("#bioName").text("นายวุฒิชัย เศรษฐบุตร");
+                $("#bioTitle").text("กรรมการบริหารและเลขานุการบริษัท");
                 $("#bioContent").attr("src", "http://www.gel.co.th/craft/templates/about/biography/wuttichai-th.html");
                 $("#bioModal").modal();
             });
         } else if($(".wuttichai-eng")) {
             $(".wuttichai-eng").click(function() {  
                 $("#bioName").text("Mr. Wuttichai Sresthabutra");
-                $("#bioTitle").text("Executive Committee");
+                $("#bioTitle").text("Executive Committee and Company Secretary");
                 $("#bioContent").attr("src", "http://www.gel.co.th/craft/templates/about/biography/wuttichai-eng.html");
                 $("#bioModal").modal();
             });
@@ -359,7 +383,7 @@
         } else if($(".wisadja-eng")) {
             $(".wisadja-eng").click(function() {  
                 $("#bioName").text("Mrs. Wisadja Kochsena");
-                $("#bioTitle").text("Executive Committee");
+                $("#bioTitle").text("Director of Finance and Account");
                 $("#bioContent").attr("src", "http://www.gel.co.th/craft/templates/about/biography/wisadja-eng.html");
                 $("#bioModal").modal();
             });
