--- a/about/biography/board-of-directors.html
+++ b/about/biography/board-of-directors.html
@@ -35,7 +35,7 @@
                         <p>                        
                             <a class="thitipong-th" href="#">นายธิติพงศ์ ตั้งพูนผลวิวัฒน์</a>
                             <br/>
-                            <a class="thitipong-th" href="#">กรรมการบริษัท / ประธานกรรมการบริหาร และ ประธานเจ้าหน้าที่บริหาร</a>
+                            <a class="thitipong-th" href="#">กรรมการบริษัท</a>
                         </p>
                     </div>
                 </div>
@@ -44,33 +44,6 @@
         </div>
 
         <div class="row">
-
-            <div class="col-md-4">
-                <div id="th-borwornsak" class="card textCenter" style="width: 30rem;">
-                    <a id="#" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/tawat_anantanavanich.jpg#asset:2560:url"></a>
-                    <div class="card-body">
-                        <p>                        
-                            <a id="#" href="#">ดร.ธวัช อนันต์ธนวณิช</a>
-                            <br/>
-                            <a id="#" href="#">กรรมการบริษัท/กรรมการบริหาร และ กรรมการผู้จัดการ</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card textCenter" style="width: 30rem;">
-                    <a class="suchart-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2562:url"></a>
-                    <div class="card-body">
-                        <p>                        
-                            <a class="suchart-th" href="#">นายสุชาติ บุญบรรเจิดศรี</a>
-                            <br/>
-                            <a class="suchart-th" href="#">ประธานกรรมการตรวจสอบและกรรมการอิสระ</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
                     <a class="pannee-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/pannee_jarusombat.jpg#asset:2561:url"></a>
@@ -78,15 +51,12 @@
                         <p>                        
                             <a class="pannee-th" href="#">นางพรรณี จารุสมบัติ</a>
                             <br/>
-                            <a class="pannee-th" href="#">กรรมการตรวจสอบและกรรมการอิสระ</a>
+                            <a class="pannee-th" href="#">กรรมการอิสระ</a>
                         </p>
                     </div>
                 </div>
             </div>
         
-        </div>
-
-        <div class="row">
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
                     <a class="vichaya-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vichaya_krea_ngam.jpg#asset:2562:url"></a>
@@ -94,11 +64,12 @@
                         <p>                        
                             <a class="vichaya-th" href="#">ดร.วิชญะ เครืองาม</a>
                             <br/>
-                            <a class="vichaya-th" href="#">กรรมการตรวจสอบและกรรมการอิสระ</a>
+                            <a class="vichaya-th" href="#">กรรมการอิสระ</a>
                         </p>
                     </div>
                 </div>
             </div>
+
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
                     <a class="wirach-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wirach_morakotkarn.jpg#asset:2563:url"></a>
@@ -111,6 +82,24 @@
                     </div>
                 </div>
             </div>
+
+        </div>
+
+        <div class="row">
+
+            <div class="col-md-4">
+                <div class="card textCenter" style="width: 30rem;">
+                    <a class="vipoota-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vipoota_trakulhoon.jpg#asset:2571:url"></a>
+                    <div class="card-body">
+                        <p>                        
+                            <a class="vipoota-th" href="#">นายวิภูธา ตระกูลฮุน</a>
+                            <br/>
+                            <a class="vipoota-th" href="#">กรรมการอิสระ</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
                     <a class="wuttichai-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wuttichai_sresthabutra.jpg#asset:2557:url"></a>
@@ -118,7 +107,7 @@
                         <p>                        
                             <a class="wuttichai-th" href="#">นายวุฒิชัย เศรษฐบุตร</a>
                             <br/>
-                            <a class="wuttichai-th" href="#">กรรมการบริษัท / กรรมการบริหารและเลขานุการบริษัท</a>
+                            <a class="wuttichai-th" href="#">กรรมการและเลขานุการบริษัท</a>
                         </p>
                     </div>
                 </div>
@@ -136,7 +125,7 @@
                         <p>                        
                             <a class="borwornsak-eng" href="#">Prof. Dr. Borwornsak Uwanno</a>
                             <br/>
-                            <a class="borwornsak-eng" href="#">Chairman of the Board of Director / Independent Director</a>
+                            <a class="borwornsak-eng" href="#">Chairman of the Board of Director and Independent Director</a>
                         </p>
                     </div>
                 </div>
@@ -148,7 +137,7 @@
                         <p>                        
                             <a class="sophon-eng" href="#">Mr. Sophon Pholprasit</a>
                             <br/>
-                            <a class="sophon-eng" href="#">Vice Chairman of the Board / Independent Director</a>
+                            <a class="sophon-eng" href="#">Vice Chairman of the Board and Independent Director</a>
                         </p>
                     </div>
                 </div>
@@ -160,7 +149,7 @@
                         <p>                        
                             <a class="thitipong-eng" href="#">Mr. Thitipong Tangpoonphonvivat</a>
                             <br/>
-                            <a class="thitipong-eng" href="#">Director / Chief Executive Officer</a>
+                            <a class="thitipong-eng" href="#">Director</a>
                         </p>
                     </div>
                 </div>
@@ -171,24 +160,12 @@
         <div class="row" >
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <a class="#" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/tawat_anantanavanich.jpg#asset:2560:url"></a>
-                    <div class="card-body">
-                        <p>                        
-                            <a class="#" href="#">Dr. Tawat Anantanavanich</a>
-                            <br/>
-                            <a class="#" href="#">Director / Executive Director / Managing Director</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card textCenter" style="width: 30rem;">
                     <a class="pannee-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/pannee_jarusombat.jpg#asset:2561:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="pannee-eng" href="#">Mrs. Pannee Jarusombat</a>
                             <br/>
-                            <a class="pannee-eng" href="#">Audit Committee and Independent Director</a>
+                            <a class="pannee-eng" href="#">Independent Director</a>
                         </p>
                     </div>
                 </div>
@@ -200,16 +177,11 @@
                         <p>                        
                             <a class="vichaya-eng" href="#">Dr. Vichya Kreangam</a>
                             <br/>
-                            <a class="vichaya-eng" href="#">Audit Committee and Independent Director</a>
+                            <a class="vichaya-eng" href="#">Independent Director</a>
                         </p>
                     </div>
                 </div>
             </div>
-
-
-        </div>
-
-        <div class="row" >
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
                     <a class="wirach-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wirach_morakotkarn.jpg#asset:2563:url"></a>
@@ -222,6 +194,22 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="row" >
+
+            <div class="col-md-4">
+                <div class="card textCenter" style="width: 30rem;">
+                    <a class="vipoota-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vipoota_trakulhoon.jpg#asset:2571:url"></a>
+                    <div class="card-body">
+                        <p>                        
+                            <a class="vipoota-eng" href="#">Mr.Vipoota Trakulhoon</a>
+                            <br/>
+                            <a class="vipoota-eng" href="#">Independent Director</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
                     <a class="wuttichai-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wuttichai_sresthabutra.jpg#asset:2557:url"></a>
@@ -229,7 +217,7 @@
                         <p>                        
                             <a class="wuttichai-eng" href="#">Mr. Wuttichai Sresthabutra</a>
                             <br/>
-                            <a class="wuttichai-eng" href="#">Director / Executive Director / Company Secretary</a>
+                            <a class="wuttichai-eng" href="#">Director and Company Secretary</a>
                         </p>
                     </div>
                 </div>
