--- a/about/biography/nomination-remuneration-committee.html
+++ b/about/biography/nomination-remuneration-committee.html
@@ -2,14 +2,15 @@
 
     {% if craft.i18n.getCurrentLocale() == 'th' %}
         <div class="row" >
+
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <a class="wirach-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wirach_morakotkarn.jpg#asset:2563:url"></a>
+                    <a class="vipoota-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url"></a>
                     <div class="card-body">
-                        <p> 
-                            <a class="wirach-th" href="#">นายวิรัช มรกตกาล</a>
+                        <p>                        
+                            <a class="vipoota-th" href="#">นายวิภูธา ตระกูลฮุน</a>
                             <br/>
-                            <a class="wirach-th" href="#">ประธานกรรมการสรรหาและพิจารณาค่าตอบแทน</a>
+                            <a class="vipoota-th" href="#">ประธานคณะกรรมการสรรหาและพิจารณาค่าตอบแทน</a>
                         </p>
                     </div>
                 </div>
@@ -38,38 +39,25 @@
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="row" >
-            <div class="col-md-4">
-                <div class="card textCenter" style="width: 30rem;">
-                    <a class="wuttichai-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wuttichai_sresthabutra.jpg#asset:2557:url"></a>
-                    <div class="card-body">
-                        <p> 
-                            <a class="wuttichai-th" href="#">นายวุฒิชัย เศรษฐบุตร</a>
-                            <br/>
-                            <a class="wuttichai-th" href="#">กรรมการสรรหาและพิจารณาค่าตอบแทน</a>
-                        </p>
-                    </div>
-                </div>
-            </div>   
         </div>
 
     {% else %}
+
         <div class="row" >
+
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <a class="wirach-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wirach_morakotkarn.jpg#asset:2563:url"></a>
+                    <a class="vipoota-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url"></a>
                     <div class="card-body">
                         <p>                        
-                            <a class="wirach-eng" href="#">Mr. Wirach Morakotkarn</a>
+                            <a class="vipoota-eng" href="#">Mr.Vipoota Trakulhoon</a>
                             <br/>
-                            <a class="wirach-eng" href="#">Chairman of the Nominating & Remuneration Committee</a>
+                            <a class="vipoota-eng" href="#">Chairman of the Nomination and Remuneration Committee</a>
                         </p>
                     </div>
                 </div>
             </div>
-
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
                     <a class="thitipong-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/thitipong_tangpoonphonvivat.jpg#asset:2556:url"></a>
@@ -82,7 +70,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
                     <a class="vichaya-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vichaya_krea_ngam.jpg#asset:2562:url"></a>
@@ -95,20 +82,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row" >
-            <div class="col-md-4">
-                <div class="card textCenter" style="width: 30rem;">
-                    <a class="wuttichai-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wuttichai_sresthabutra.jpg#asset:2557:url"></a>
-                    <div class="card-body">
-                        <p>                        
-                            <a class="wuttichai-eng" href="#">Mr. Wuttichai Sresthabutra</a>
-                            <br/>
-                            <a class="wuttichai-eng" href="#">Nominating & Remuneration Committee</a>
-                        </p>
-                    </div>
-                </div>
-            </div>     
+
         </div>
 
     {% endif %}
