--- a/about/biography/risk-management-committee.html
+++ b/about/biography/risk-management-committee.html
@@ -3,6 +3,7 @@
     {% if craft.i18n.getCurrentLocale() == 'th' %}
 
         <div class="row" >
+
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
                     <a class="sophon-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/sophon_pholprasit.jpg#asset:2559:url"></a>
@@ -10,54 +11,26 @@
                         <p> 
                             <a class="sophon-th" href="#">นายโสภณ ผลประสิทธิ์</a>
                             <br/>
-                            <a class="sophon-th" href="#">กรรมการกำกับดูแลความเสี่ยง</a>
+                            <a class="sophon-th" href="#">ประธานคณะกรรมการกำกับดูแลความเสี่ยง</a>
                         </p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <a class="thitipong-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/thitipong_tangpoonphonvivat.jpg#asset:2556:url"></a>
+                    <a class="vipoota-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vipoota_trakulhoon.jpg#asset:2571:url"></a>
                     <div class="card-body">
                         <p>                        
-                            <a class="thitipong-th" href="#">นายธิติพงศ์ ตั้งพูนผลวิวัฒน์</a>
+                            <a class="vipoota-th" href="#">นายวิภูธา ตระกูลฮุน</a>
                             <br/>
-                            <a class="thitipong-th" href="#">กรรมการกำกับดูแลความเสี่ยง</a>
+                            <a class="vipoota-th" href="#">กรรมการอิสระ</a>
                         </p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <a class="tawat-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/tawat_anantanavanich.jpg#asset:2560:url"></a>
-                    <div class="card-body">
-                        <p>                        
-                            <a class="tawat-th" href="#">ดร.ธวัช อนันต์ธนวณิช</a>
-                            <br/>
-                            <a class="tawat-th" href="#">กรรมการกำกับดูแลความเสี่ยง</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row" >
-           
-            <div class="col-md-4">
-                <div class="card textCenter" style="width: 30rem;">
-                    <a class="#" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url"></a>
-                    <div class="card-body">
-                        <p> 
-                            <a class="#" href="#">นายชัยนรินทร์ สายรังษี</a>
-                            <br/>
-                            <a class="#" href="#">กรรมการกำกับดูแลความเสี่ยง</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card textCenter" style="width: 30rem;">
-                    <a class="wisadja-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url"></a>
+                    <a class="wisadja-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wisadja_kochsena.jpg#asset:2572:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="wisadja-th" href="#">นางวิสัจจา คชเสนา</a>
@@ -70,9 +43,11 @@
 
         </div>
 
+
     {% else %}
 
         <div class="row" >
+
             <div class="col-md-4">
                 <div id="wuttichai" class="card textCenter" style="width: 30rem;">
                     <a class="sophon-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/sophon_pholprasit.jpg#asset:2559:url">
@@ -87,46 +62,19 @@
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <a class="thitipong-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/thitipong_tangpoonphonvivat.jpg#asset:2556:url">
+                    <a class="vipoota-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vipoota_trakulhoon.jpg#asset:2571:url"></a>
                     <div class="card-body">
                         <p>                        
-                            <a class="thitipong-eng" href="#">Mr. Thitipong Tangpoonphonvivat</a>
+                            <a class="vipoota-eng" href="#">Mr.Vipoota Trakulhoon</a>
                             <br/>
-                            <a class="thitipong-eng" href="#">Risk Management Committee</a>
+                            <a class="vipoota-eng" href="#">Independent Director</a>
                         </p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <a class="#" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/tawat_anantanavanich.jpg#asset:2560:url">
-                    <div class="card-body">
-                        <p>                        
-                            <a class="#" href="#">Dr. Tawat Anantanavanich</a>
-                            <br/>
-                            <a class="#" href="#">Risk Management Committee</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row" >
-            <div class="col-md-4">
-                <div class="card textCenter" style="width: 30rem;">
-                    <a class="#" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url">
-                    <div class="card-body">
-                        <p>                        
-                            <a class="#" href="#">Mr. Chainarin Sairungsri</a>
-                            <br/>
-                            <a class="#" href="#">Risk Management Committee</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card textCenter" style="width: 30rem;">
-                    <a class="wisadja-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url">
+                    <a class="wisadja-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wisadja_kochsena.jpg#asset:2572:url">
                     <div class="card-body">
                         <p>                        
                             <a class="wisadja-eng" href="#">Mrs. Wisadja Kochsena</a>
