--- a/about/general-information.html
+++ b/about/general-information.html
@@ -45,7 +45,7 @@
                         <td>สำนักงานสาขา</td>
                         <td>
                             สาขาที่ 1 : เลขที่ 99,99/1-5 หมู่ที่ 4 ตำบลเชียงรากน้อย อำเภอสามโคก จังหวัดปทุมธานี 12160
-                            <br/>สาขาที่ 2 : เลขที่ 99/19 หมู่ที่ 2 ตำบลเชิงเนิน อำเภอเมืองระยอง จังหวัดระยอง 21000 (จดทะเบียนเมื่อวันที่ 9 มีนาคม พ.ศ. 2558)
+                            <br/>สาขาที่ 2 : เลขที่ 99/9 หมู่ที่ 1 ตำบลบ้านแลง อำเภอเมืองระยอง จังหวัดระยอง 21000
                         </td>
                     </tr>
                     <tr class="table-active">
@@ -102,11 +102,11 @@
                     <tr class="table-active">
                         <td>ผู้สอบบัญชี</td>
                         <td>
-                            <b>บริษัท แกรนท์ ธอนตัน จำกัด</b><br/>
-                            เลขที่ 87/1 ออลซีซั่นส์ เพลส แคปิตอล ทาวเวอร์ ชั้น 18<br/>
-                            ถนนวิทยุ แขวงลุมพินี เขตปทุมวัน กรุงเทพฯ 10330<br/>
-                            <b>โทรศัพท์ :</b> 02-205-8222<br/>
-                            <b>โทรสาร :</b> 02-634-5399 , 02-654-3339
+                            <b>บริษัท พราวด์ อิน โปร จำกัด</b><br/>
+                            อาคารวอลล์สตรีททาวเวอร์ ชั้น 13<br/>
+                            เลขที่ 33/62 ถนนสุรวงศ์ แขวงสุริยวงศ์<br/>
+                            เขตบางรัก กรุงเทพมหานคร 10500<br/>
+                            <b>โทรศัพท์ :</b> 02-235-6950<br/>
                         </td>
                     </tr>
 
@@ -131,14 +131,13 @@
                     </tr>
                     <tr class="table-active">
                         <td>Headquarter</td>
-                        <td>44/2, Moo 2, Tivanon Road, Tambon Bangkadee, Ampoe Muang, Pathumthani Province 12000</td>
+                        <td>44/2, Moo 2, Tivanont Road, Bangkadi, Muang Pathumthani, Pathumthani 12000</td>
                     </tr>
                     <tr class="table-active">
                         <td>Branch Office</td>
                         <td>
-                            <b>Branch 2</b>: 544 Moo 3 Baanlen, Bang Pa Inn district, Ayutthaya province 13160
-                            <br/><b>Branch 3</b>: 99 Moo 4 Tambon Pa District, Pathum Thani Province. 12160
-                            <br/>(Registered on 9 March 2015)
+                            Branch 1: 99,99/1-5 Moo 4, Chiangraknoi, Sam Khok, Pathumthani 12160
+                            <br/>Branch 2: 99/9 Moo 1 Banlang, Muang Rayong, Rayong 21000
                         </td>
                     </tr>
                     <tr class="table-active">
@@ -195,11 +194,11 @@
                     <tr class="table-active">
                         <td>Auditor</td>
                         <td>
-                            <b>Grant Thornton Company Limited</b><br/>
-                            18th Floor, Capital Tower All Seasons Place<br/>
-                            87/1 Wireless Road Bangkok 10330, Thailand.<br/>
-                            <b>Telephone :</b> +66 2 205 8222<br/>
-                            <b>Fax :</b> +66 2 654 3339
+                            <b>Proud In Pro Co., Ltd.</b><br/>
+                            13<sup>th</sup> Floor, Wall Street Tower<br/>
+                            33/62 Surawong Road, Suriyawong<br/>
+                            Bang Rak, Bangkok 10500, Thailand<br/>
+                            <b>Telephone :</b> +66 2 235 6950<br/>
                         </td>
                     </tr>
 
