--- a/about/vision-mission.html
+++ b/about/vision-mission.html
@@ -24,29 +24,40 @@
     -->
     
     {% if craft.i18n.getCurrentLocale() == 'th' %}
-    <div class="container" style="width:100%" align="center">
+    <div class="container" style="width:60%" align="center">
         <div class="row">
             <div class="col">
                 <div style="margin-left:30px; width:80%;">
                     <div style="text-align:justify; padding:20px; background-color:#1d5124; color:#ffffff;">    
                         <span style="font-size:40px;">วิสัยทัศน์</span>
                         <br/>
-                        <span style="font-size:25px;">เราจะทำให้การก่อสร้างเป็นเรื่องง่าย และใช้ทรัพยากรอย่างประหยัดและคุ้มค่าที่สุด</span>
+                        <span style="font-size:25px;">“นำแรงบัลดาลใจ นวัตกรรมและความชำนาญด้านการก่อสร้างสู่ใจลูกค้า”</span>
                     </div>
                     <div align="center" style="margin-top:20px;">
                         <span><b style="font-size:40px;">พันธกิจ</b></span>
-                        <br/>
-                        <span style=""><b>บริษัทฯ มีความมุ่งมั่นในการดำเนินงานให้สำเร็จผล โดยผ่านแนวคิด</b></span>
                     </div>
                     <div style="background-color:#f9f9f9; margin-top:15px; padding:15px; width:90%" align="left">
-                        <ul>
-                            <li><b>Total Solution Provider</b>
-                            <br/>เราจะเป็นศูนย์รวมในการให้บริการและให้คำปรึกษาแก่ลูกค้า เพื่อให้ลูกค้าสามารถ ควบคุม ต้นทุน และระยะเวลาการก่อสร้างตามแผนที่วางไว้ ให้เกิดคุณภาพสูงสุด 
-                            </li>
-                            <li><b>เป็นที่หนึ่งในใจลูกค้า</b>
-                            <br/>เราจะผลิตสินค้าและให้บริการเพื่อทำให้ลูกค้าได้รับความความพึงพอใจสูงสุด
-                            </li>
-                        </ul>
+                        <p>
+                            <b>สร้างคน</b> 
+                            <ul>
+                                <li>GEL เป็นองค์กรมุ่งผลงานที่สร้างคุณค่าแก่ผู้เกี่ยวข้องทุกภาคส่วนด้วยบรรยากาศการทำงานเป็นทีมร่วมกับผู้อื่นอย่างเปิดกว้าง จากผู้เชี่ยวชาญ พร้อมจริยธรรมทางวิชาชีพ</li>
+                            </ul>
+                        </p>
+                        <p>
+                            <b>สร้างงาน</b>
+                            <ul>                          
+                                <li>นำระบบเทคโนโลยีดิจิทัลมาใช้พัฒนากระบวนการทำงานใช้ผลักดันสินค้าและบริการ และใช้เพิ่มความสามารถในการเข้าใจ</li>
+                                <li>เราจะพัฒนาทั้งกระบวนการทำงาน การผลิตสินค้าและงานบริการอย่างรัดกุมเพื่อนำไปสู่ประสิทธิภาพอันยอดเยี่ยมในการทำงานพร้อมยกระดับคุณภาพผลงานสูงสุด</li>
+                            </ul>
+                        </p>
+                        <p>
+                            <b>สร้างพันธมิตร</b>
+                            <ul>                          
+                                <li>GEL ส่งมอบผลิตภัณฑ์ งานบริการและให้คำปรึกษาบริหารจัดการด้วยนวัตกรรม ที่ทำให้ลูกค้าเกิดความสนใจและผูกพัน</li>
+                                <li>GEL เป็นศูนย์กลางด้านการจัดหาระบบเทคโนโลยีงาน</li>
+                            </ul>
+                        </p>
+                        
                     </div>
                 </div>
             </div>
