Changed homepage slogan

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             <div class="wrap wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;">
                 <img src="{{ craft.config.environmentVariables.baseUrl }}assets/img/logo.png"
                     class="img-responsive center-block img-logo">
-                <h1>SPARK WONDER EVERYTHING POSSIBLE</h1>
+                <!--h1>SPARK WONDER EVERYTHING POSSIBLE</h1-->
+                <h1>IMAGINEERING YOUR DREAM</h1>
             </div>
             <a href="#section1"><i class="fa fa-angle-double-down"></i></a>
         </div>
