Change K. Sarun name (Thai)

--- a/about/management-team.html
+++ b/about/management-team.html
@@ -154,7 +154,7 @@
                     <a class="saran-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url"></a>
                     <div class="card-body">
                         <p>                        
-                            <a class="saran-th" href="#">นายศรันย์ เวียงคำมา</a>
+                            <a class="saran-th" href="#">นายศรัณย์ เวียงคำมา</a>
                             <br/>
                             <a class="saran-th" href="#">ผู้อำนวยการฝ่ายผลิตและบริการผนังคอนกรีตสำเร็จรูป</a>
                         </p>
